<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" tools:ignore="MissingTranslation">RottenApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_movie">Movie</string>
    <string name="search">Search</string>
    <string name="runtime">Running Time</string>
    <string name="genre">Genre</string>
    <string name="rating">Rating</string>
    <string name="release">Theater Release</string>
    <string name="director">Director</string>
    <string name="critics">of critics</string>
    <string name="audience">of audience</string>
    <string name="title_activity_full_image">Poster</string>
    <string name="title_activity_search">Search results</string>
    <string name="box_office">Top Box Office</string>
    <string name="see_more">See more</string>
    <string name="upcoming">Upcoming</string>
    <string name="search_film">Search film</string>
    <string name="refresh">Refresh</string>
    <string name="drawer_open">Drawer opened</string>
    <string name="drawer_close">Drawer closed</string>
    <string name="favourite">Favourite</string>

    <string-array name="drawer_list">
        <item>Home</item>
        <item>Favourites</item>
    </string-array>

    <array name="nav_drawer_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_action_important</item>
    </array>

    <string name="title_activity_favourites">Favourites</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="share">Share</string>
    <string name="chooser_title">Share With</string>
    <string name="title_activity_critics">Critics</string>
    <string name="critic_icon">Critic Icon</string>
    <string name="synopsis">Synopsis</string>
    <string name="details">Details</string>
    <string name="cast">Cast</string>
    <string name="no_score">No score</string>
    <string name="similar">Similar</string>
    <string name="title_activity_cast">Cast</string>
    <string name="title_activity_similar">Similar</string>
    <string name="top_dvd">TOP DVD</string>
    <string name="upcoming_dvd">Upcoming DVD</string>
    <string name="theater_release">Theater Release</string>
    <string name="dvd_release">DVD Release</string>
    <string name="empty_favourites">No favourites found. Add a favourite using the star icon in the upper right of any film.</string>
    <string name="unrated">Unrated</string>
    <string name="no_synopsis">No synopsis available</string>
    <string name="unknown">Unknown</string>
    <string name="empty_similar">No similar movies found</string>
    <string name="empty_cast">No cast available</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="pref_theme">App theme</string>
    <string name="pref_style">Style</string>
    <string name="more">More</string>
    <string name="google">Google</string>
    <string name="youtube">Youtube</string>
    <string name="amazon">Amazon</string>
    <string name="imdb">IMDb</string>
    <string name="rotten">Rotten Tomatoes</string>

</resources>
