<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MovieActivity"
    tools:ignore="MergeRootFrame"
>

    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="8dp">

                <ProgressBar
                    android:id="@+id/progressPoster"
                    style="?android:attr/progressBarStyleLarge"
                    android:layout_width="100dp"
                    android:layout_height="147dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginRight="15dp"
                    android:visibility="visible" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="147dp"
                    android:id="@+id/ivPoster"
                    android:layout_gravity="left|top"
                    android:onClick="openFullPoster"
                    android:layout_marginRight="15dp"
                    android:visibility="gone"
                    android:adjustViewBounds="true" />

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    >

                    <LinearLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingBottom="4dp"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:layout_gravity="left|top"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/tvTitle"
                            android:text="Here goes the longest movie title you can think of"
                            android:singleLine="true"
                            android:enabled="true"
                            android:maxWidth="260dp"
                            android:layout_marginRight="4dp"
                            />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:id="@+id/tvYear"
                            android:text="year"
                            android:layout_gravity="left|top"
                        />

                    </LinearLayout>

                    <GridLayout
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:columnCount="2"
                        android:rowCount="2"
                        android:onClick="openFullCritics"
                        android:clickable="true"
                        android:padding="10dp">

                        <ImageView
                            android:layout_height="32dp"
                            android:layout_width="32dp"
                            android:contentDescription="@string/critics"
                            android:id="@+id/ivCritics"
                            android:layout_marginRight="8dp"
                            />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/tvCritics"
                            android:layout_gravity="center_vertical" />

                        <ImageView
                            android:layout_height="32dp"
                            android:layout_width="32dp"
                            android:contentDescription="@string/critics"
                            android:id="@+id/ivAudience"
                            android:layout_marginRight="8dp"
                            />

                        <TextView
                            android:layout_height="wrap_content"
                            android:layout_width="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:id="@+id/tvAudience"
                            android:layout_gravity="center_vertical" />

                    </GridLayout>

                </LinearLayout>

            </LinearLayout>

            <!-- Synopsis Separator -->
            <TextView
                android:id="@+id/tvBoxOffice"
                android:text="@string/synopsis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="?android:listSeparatorTextViewStyle"
                />

            <!-- Synopsis -->
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:id="@+id/tvSynopsis"
                android:text="No synopsis available"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp"
                />

            <!-- Details Separator -->
            <TextView
                android:id="@+id/tvBoxOffice"
                android:text="@string/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="?android:listSeparatorTextViewStyle"
                />

            <!-- Details -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="8dp"
                >

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginBottom="8dp"
                    >

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/rating"
                        android:id="@+id/tvRatingText"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/tvRatingValue"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content">

                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/runtime"
                        android:id="@+id/tvRunningText"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:id="@+id/tvRunningValue"/>

                </LinearLayout>

            </LinearLayout>

            <!-- Cast Separator -->
            <TextView
                android:id="@+id/tvBoxOffice"
                android:text="@string/cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                style="?android:listSeparatorTextViewStyle"
                />

            <GridView
                android:scrollbars="none"
                android:id="@+id/gridView"
                android:layout_width="fill_parent"
                android:layout_height="125dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:numColumns="auto_fit"
                android:verticalSpacing="10dp"
                android:stretchMode="columnWidth"
                android:gravity="center"
                android:clickable="false"
                android:horizontalSpacing="8dp"
                android:columnWidth="115dp"
                android:drawSelectorOnTop="false"
                android:textFilterEnabled="false">

                </GridView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
